fix: how I help mobile subheading spacing

--- a/src/static/css/tailwind.css
+++ b/src/static/css/tailwind.css
@@ -45,7 +45,7 @@
   }
 
   h1 {
-    @apply text-brand-red mb-9 text-4xl md:text-6xl;
+    @apply text-brand-red mb-9 text-5xl md:text-6xl;
   }
 
   h2 {
